--- a/scss/main.css
+++ b/scss/main.css
@@ -72,7 +72,7 @@
   --bs-dark-border-subtle: #adb5bd;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-font-sans-serif: "Playfair Display";
+  --bs-font-sans-serif: "Playfair";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -11980,6 +11980,13 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/* Main */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -11995,6 +12002,7 @@ main {
   flex: 1;
 }
 
+/* Banner under Header */
 .hero-scene {
   position: relative;
 }
@@ -12020,19 +12028,38 @@ main {
   justify-content: center;
 }
 
+/* Font styles */
+/* Titles */
+.heroTitle {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 24px;
+  font-family: "Playfair";
+  color: white;
+}
+
 .contentTitle {
   font-weight: bold;
   text-align: center;
   margin-bottom: 24px;
+  font-family: "Playfair";
+  color: black;
+}
+
+/* Contents */
+.heroText {
+  text-align: center;
+  font-family: "Playfair";
+  color: white;
 }
 
 .contentText {
   text-align: center;
-  font-family: "Playfair Display";
+  font-family: "Playfair";
+  color: black;
 }
 
-/* Slider container */
-/* Slider container */
+/* Slider Image */
 /* Slider container */
 .slider {
   position: relative;
@@ -12088,4 +12115,58 @@ button.next {
   font-size: 1.1rem;
   font-weight: 500;
   color: black;
+}
+
+/* Tournament tiny window */
+.tournament-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin: 24px;
+}
+
+.tournament-card {
+  position: relative;
+  height: 180px;
+  border-radius: 12px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.tournament-card:hover {
+  transform: scale(1.03);
+}
+
+.tournament-card img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: brightness(0.5);
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 15px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0));
+  color: white;
+}
+
+.overlay h3, .overlay .h3 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.overlay p {
+  margin: 5px 0;
+  font-weight: bold;
+  color: white;
+}
+
+.overlay span {
+  font-size: 14px;
+  opacity: 0.9;
 }/*# sourceMappingURL=main.css.map */
