--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -6,6 +6,7 @@
 $primary: #0D0217;
 $secondary: #1C3C50;
 $tertiary: #AEBFE0;
+$bubbleText: #A9A9A9;
 
 // Font 
 
@@ -13,6 +14,9 @@ $font_family_sans_serif: "Playfair";
 
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+
+
 
 // Then add additional custom code here
 
@@ -38,6 +42,10 @@ main {
     flex: 1;
 }
 
+i {
+    font-size: 0.9rem;
+    color: white;
+}
 /* Banner under Header */
 
 .hero-scene{
@@ -211,6 +219,20 @@ button.next { right: 10px; }
 .overlay span {
   font-size: 14px;
   opacity: 0.9;
+}
+
+/* Login Window */
+
+.login-container {
+  width: 300px; 
+  max-width: 90%; 
+  margin: auto; 
+  padding: 30px; 
+  background-color: $primary; 
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  text-align: align;
+  color: white;
 }
 
 
